objects/AR_SFObj1__c.object
<CustomObject>
    <description>Add Comment for this Object ARSFObj1</description>
    <fields>
        <fullName>ARSFField4__c</fullName>
        <label>ARSFField4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_SFField1__c</fullName>
        <description>Add Desc AR-SFField1</description>
        <label>AR-SFField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_SFField2__c</fullName>
        <description>Add  comment for AR-SFField2</description>
        <label>AR-SFField2</label>
        <precision>13</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <label>AR-SFObj1</label>
    <nameField>
        <label>AR-SFObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARSFObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARSFvalidationRule1</fullName>
        <active>true</active>
        <description>Add comment for this Validation.</description>
        <errorConditionFormula>ISBLANK( AR_SFField1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
</CustomObject>